testsuite/tests/properties/invalid_lambda_arg_type/filtermap_no_index.lkt
import common

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[Entity[Example]] =
        node.items.filtermap(
            (e: Bool) => if e then node.items.at(1) else node.at(e),
            (e: Example) => not e.is_null
        )
}
